clr-rpm-config: Autospec creation for update from version 210 to version 211

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-rpm-config
-url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-210.tar.xz
+url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-211.tar.xz
 archives = 
 giturl = 
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
