--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-rpm-config
-url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-219.tar.xz
+url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-220.tar.xz
 archives = 
 giturl = 
 domain = 
@@ -38,6 +38,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
