--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = clr-rpm-config
-url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-220.tar.xz
+url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-221.tar.xz
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
