clr-rpm-config: Autospec creation for update from version 221 to version 20.09.09

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,13 @@
 [package]
 name = clr-rpm-config
-url = http://localhost/cgit/projects/clr-rpm-config/snapshot/clr-rpm-config-221.tar.xz
+url = file:///insilications/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-20.09.09.tar.gz
 archives = 
 giturl = 
 domain = 
+download_from_git = True
+branch = master
+force_module = 
+archives_from_git = 
 alias = 
 
 [autospec]
@@ -11,6 +15,10 @@ alias =
 32bit = false
 # allow package to build with test failures
 allow_test_failures = false
+# alternative cargo pattern
+altcargo1 = false
+# alternative pgo flags
+altflags_pgo = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
@@ -19,6 +27,10 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# configure build with special options
+build_special = false
+# configure build with special options 2
+build_special2 = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -27,6 +39,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# alternative flags
+fsalt1 = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
@@ -35,8 +49,14 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# disable automatic provides processing
+noautoprov = false
+# disable automatic requeriments processing
+noautoreq = false
 # do not generate debuginfo for this package
 nodebug = false
+# ignore missing build ids
+nomissingbuildids = false
 # disable stripping binaries
 nostrip = false
 # configure build also for openmpi
