--- a/options.conf
+++ b/options.conf
@@ -1,12 +1,13 @@
 [package]
 name = clr-rpm-config
-url = file:///insilications/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-20.09.09.tar.gz
+url = file:///insilications/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-.tar.gz
 archives = 
 giturl = 
 domain = 
 download_from_git = True
 branch = master
 force_module = 
+force_fullclone = 
 archives_from_git = 
 alias = 
 
