--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-rpm-config
-url = file:///insilications/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-250.tar.gz
+url = file:///insilications/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-255.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -38,6 +38,8 @@ compat = false
 conservative_flags = false
 # dev package requires the extras to be installed
 dev_requires_extras = false
+# disable maintainer mode for autotools
+disable_maintainer = false
 # pass -ffast-math to compiler
 fast-math = false
 # alternative flags
