clr-rpm-config: Autospec creation for version 255

--- a/options.conf
+++ b/options.conf
@@ -82,6 +82,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja instead of makefiles
+use_ninja = false
 # require package verification for build
 verify_required = false
 
