--- a/options.conf
+++ b/options.conf
@@ -32,6 +32,8 @@ broken_parallel_build = false
 build_special = false
 # configure build with special options 2
 build_special2 = false
+# show ccache stats after compile
+ccstats = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
