Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-rpm-config
-url = file:///aot/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-500.tar.gz
+url = file:///aot/build/clearlinux/packages/clr-rpm-config/clr-rpm-config-v21.05.20.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -52,6 +52,8 @@ disable_maintainer = false
 exclude_locales = false
 # pass -ffast-math to compiler
 fast-math = false
+# enable filtering of provides and requires
+filters_provreq = false
 # alternative flags
 fsalt1 = false
 # alternative 32bits flags
