--- a/options.conf
+++ b/options.conf
@@ -98,6 +98,8 @@ use_clang = false
 use_lto = true
 # use ninja instead of makefiles
 use_ninja = false
+# enable source /aot/intel/oneapi/setvars.sh
+use_oneapi = false
 # require package verification for build
 verify_required = false
 
